<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>axioma_teleop_gui</name>
  <version>0.1.0</version>

  <description>
    Modular teleoperation GUI for ROS 2 with multiple control modes.
    Initially developed for the Axioma robot, but adaptable to any robot
    using geometry_msgs/Twist interfaces.
  </description>

  <maintainer email="ing.marioalvarezvallejo@gmail.com">
    Mario David Alvarez Vallejo
  </maintainer>

  <author email="ing.marioalvarezvallejo@gmail.com">
    Mario David Alvarez Vallejo (MrDavidAlv)
  </author>

  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>

